# SocialGuard-RL

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  OrbStack.dmg  README.md  SOCIALGUARD_RL_PLAN.md  agent.py  baseline.py  evaluate.py  fix.txt  inference.py  model.py  openenv.yaml  plot_curve.py  pyproject.toml  rename_script.py  requirements-prod.txt  requirements-training.txt  requirements.txt  server.py  snap.py  task2_results.txt  task3_results.txt  training_log.csv  validate_output.txt
configs/: default.yaml  inference.yaml  task1.yaml  task2.yaml  task3.yaml
dashboard/: app.py  graph_view.py  metrics_view.py
data/: __init__.py  synthetic_graph.py
demo_outputs/: demo_run_config.yaml
env/: __init__.py  env.py  models.py  rewards.py  spaces.py
graders/: __init__.py  grader.py
hf-space/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  agent.py  baseline.py  content_gen.py  default.yaml  inference.py  patch_dashboard.py  patch_env.py  pytest.ini  requirements-prod.txt  requirements.txt  rewards.py  server.py  social_graph.py  task2.yaml  task3.yaml  task_cib.py  task_spam.py  train_ppo.py
scripts/: pre_validate.sh
server/: app.py
sim/: __init__.py  content_gen.py  social_graph.py  user_behavior.py
tasks/: __init__.py  base_task.py  task_cib.py  task_misinfo.py  task_spam.py
tests/: __init__.py  test_curriculum.py  test_env.py  test_grader.py  test_graph.py  test_nemesis.py  test_rewards.py  test_socialguard.py  test_tasks.py  test_training.py
training/: __init__.py  callbacks.py  (+3 more)
(+20 files in other folders)
