[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialguard-rl"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for social media integrity moderation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SocialGuard-RL Team" }
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "pydantic>=2.0.0",
  "numpy>=1.24.0,<2.0",
  "gymnasium>=0.29.0,<1.0",
  "networkx>=3.0,<4.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "openai>=1.0.0",
]

[tool.setuptools]
include-package-data = true
